# resume

./: .bazelrc  .dev.vars.example  .dockerignore  .env.example  .env.local  .eslintignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .infisical.json  .opencode-scan-state  .prettierignore  .prettierrc  AGENTS.md  ANALYSIS_E2E_TEST_FAILURES.md  BUILD.bazel  CLAUDE.md  CODEBASE_ANALYSIS_2025_10_13.md  CONTRIBUTING.md  COPY_AUDIT_SUMMARY.txt  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_DETAILED.md  DEPLOYMENT_STATUS_SESSION5.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCEMENT_ROADMAP.md  ENVIRONMENTAL_MAP.md  GET_TOKENS_GUIDE.md  MODERNIZATION_SUMMARY_2025_10_13.md  MODULE.bazel  NEXT_IMMEDIATE_ACTIONS.md  OWNERS  PHASE_6B_COMPLETION_SUMMARY.md  PHASE_6B_INDEX.md  PHASE_6B_TESTING_GUIDE.md  PHASE_6B_TRACKING_IMPLEMENTATION.md  PHASE_6_ANALYTICS_PLAN.md  PHASE_6_SESSION_SUMMARY.md  (+46 more)
tools/: AGENTS.md  BUILD.bazel  OWNERS  lighthouserc.json
tools/ci/: AGENTS.md  affected.go  affected.sh  run-affected.js  validate-cloudflare-native.go  validate-cloudflare-native.sh  validate-migrations.sh
tools/scripts/: AGENTS.md  README.md  healthcheck.sh
tools/scripts/bazel/: AGENTS.md  BUILD.bazel  build.sh  build_job_automation.sh  build_portfolio.sh  deploy.sh  deploy_job_automation.sh  deploy_portfolio.sh  test.sh  test_job_automation.sh  validate_data.sh
tools/scripts/deploy/: blue-green.sh  canary.sh  health-gate.sh  rollback.sh
tools/scripts/deployment/: AGENTS.md  deploy-grafana-configs.sh  deploy-helper.sh  deploy-via-api.sh  deploy-with-monitoring.sh  deploy.sh  quick-deploy.sh
tools/scripts/dev/: README.md  miniflare.config.js
tools/scripts/monitoring/: monitor-deployment.sh  setup-monitoring.sh
tools/scripts/setup/: auto-setup-gitlab-cicd.sh  configure-n8n-workflows.js  setup-gitlab-cicd.sh
tools/scripts/utils/: AGENTS.md  auto-job-search.sh  bump-version.js  jobs_template.txt  oracle-review.js  record-demo-video.js  resume-data-paths.js  resume-sync-runner.js  resume-web-data-generator.js  sync-resume-data.js  validate-resume-data.js
tools/scripts/verification/: check-agents-coverage.js  e2e-verify.sh  run-lighthouse-ci.mjs  smoke-test.go  smoke-test.sh  verify-agents-compliance.go  verify-agents-compliance.sh  verify-cicd.sh  verify-deployment.sh
typescript/: BUILD.bazel  OWNERS
typescript/cli/: AGENTS.md  BUILD.bazel  package-lock.json  package.json
typescript/cli/src/: BUILD.bazel  OWNERS
typescript/cli/src/commands/: db.js  deploy.js  verify.js
typescript/data/: AGENTS.md  BUILD.bazel  OWNERS  package.json
typescript/data/resumes/master/: resume_data.json  resume_data_ja.json  resume_final.md  resume_master.md  resume_schema.json  shinhan_resume_data_security.json
typescript/data/resumes/technical/: architecture.md  deployment.md  troubleshooting.md
typescript/job-automation/: AGENTS.md  ANTI_DETECTION.md  BUILD.bazel  DASHBOARD_ACCESS_GUIDE.md  DATA_FLOW.md  INTEGRATED_SYSTEM_GUIDE.md  README.md  README_AI_FEATURES.md  SCRIPTS_GUIDE.md  auto-cron-jobs.txt  auto-monitor.sh  config.json  docker-compose.yml  openapi.yaml  package-lock.json  package.json
typescript/job-automation/docs/: AGENTS.md  DASHBOARD_ACCESS_GUIDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  INTEGRATED_SYSTEM_GUIDE.md  README.md  README_AI_FEATURES.md  auto-apply-status.json  auto-cron-jobs.txt  auto-maintenance.sh  config.json
typescript/job-automation/scripts/: AGENTS.md  auth-persistent.js  auth-sync.js  auto-all.js  auto-login.js  cookie-inject.js  debug-login.js  direct-login-v2.js  direct-login-v3.js  direct-login-v4.js  direct-login.js  email-login.js  extract-cookies-cdp.js  extract-cookies-from-chrome.sh  extract-cookies-from-profile.js  extract-cookies-playwright.js  extract-cookies-sqlite.js  extract-cookies.js  extract-token-debug.js  google-oauth-login.js  import-cookies-manual.js  metrics-exporter.js  profile-sync.js  quick-login.js  wanted-login-v5.js
typescript/job-automation/scripts/auth-sync/: google-login.js  wanted-login.js
typescript/job-automation/scripts/profile-sync/: browser-handler.js  constants.js  index.js  utils.js  wanted-handler.js  wanted-sections.js
typescript/job-automation/src/: AGENTS.md  BUILD.bazel  add-projects.js  analyze-fields.js  cli.js  e2e.test.js  index.js  pipeline.test.js  test-project-api.js
typescript/job-automation/src/auto-apply/: AGENTS.md  application-manager.js  cli.js
typescript/job-automation/src/crawlers/: AGENTS.md  base-crawler.js  browser-utils.js  index.js  stealth-browser-crawler.js
typescript/job-automation/src/server/: index.js
typescript/job-automation/src/shared/: AGENTS.md  BUILD.bazel
typescript/job-automation/src/tools/: AGENTS.md  auth.js  (+12 more)
typescript/job-automation/tests/: drift.test.js
typescript/job-automation/workers/: .env.secrets  AGENTS.md  API_REFERENCE.md  BUILD.bazel  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DIAGRAMS.md  OWNERS  README.md  SECRETS.md  deploy.sh  migrate-json-to-d1.cjs  schema.sql  wrangler.jsonc  wrangler.toml  wrangler.triggers.toml
typescript/portfolio-worker/: AGENTS.md  BUILD.bazel  DEPLOYMENT_CHECKLIST.md  OWNERS  README.md  SEO_IMPLEMENTATION.md  dashboard.html  data.json  data_en.json  data_ja.json  entry.js  generate-og-image.js  generate-project-schemas.js  generate-worker.js  index-en.html  index-en.html.phase2-backup  index-en.html.phase3-backup  index.html  index.html.backup.1769747090  inject-project-schemas.js  manifest.json  package-lock.json  package.json  patch-project-schemas.js  resume-public.md  robots.txt  sentry-config.js  sitemap.xml  sw.js  test-seo-setup.js  test-svg.js  worker.js  wrangler.toml
typescript/portfolio-worker/lib/: AGENTS.md  BUILD.bazel  README.md  auth.js  build-orchestrator.js  cards.js  config.js  es-logger.js  file-reader.js  html-transformer.js  i18n.js  loki-logger.js  metrics.js  security-headers.js  tracing.js  utils.js  validators.js  worker-api-routes.js  worker-preamble.js  worker-routes.js  worker-writer.js
typescript/portfolio-worker/src/: AGENTS.md  BUILD.bazel  OWNERS
(+967 files in other folders)
