# =============================================================================
# Resume Monorepo - Root BUILD
# =============================================================================

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Aliases to tools package (sh_binary moved to //tools)
# =============================================================================

alias(
    name = "build",
    actual = "//tools:build",
)

alias(
    name = "test",
    actual = "//tools:test",
)

alias(
    name = "deploy",
    actual = "//tools:deploy",
)

# =============================================================================
# Filegroups for dependency tracking
# =============================================================================

filegroup(
    name = "root_configs",
    srcs = glob(
        ["*.json"],
        allow_empty = True,
    ),
)
