# =============================================================================
# Resume Monorepo - Bazel Module Definition
# =============================================================================
# Google3-style monorepo with npm wrapper approach

module(
    name = "resume",
    version = "1.0.0",
)

# =============================================================================
# Shell rules for sh_binary support
# =============================================================================
bazel_dep(name = "rules_shell", version = "0.6.1")
