# Tools - Build & Deploy Scripts
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

# Export individual scripts for cross-package use
exports_files(glob(["scripts/**/*.sh"]))

filegroup(
    name = "all_scripts",
    srcs = glob(["scripts/**/*.sh", "scripts/**/*.js", "scripts/**/*.py"]),
)

# =============================================================================
# Build/Test/Deploy Targets
# =============================================================================

sh_binary(
    name = "build",
    srcs = ["//tools/scripts/bazel:build.sh"],
    data = [
        "//typescript/portfolio-worker:sources",
        "//typescript/data:sources",
    ],
)

sh_binary(
    name = "test",
    srcs = ["//tools/scripts/bazel:test.sh"],
    data = [
        "//typescript/job-automation:sources",
    ],
)

sh_binary(
    name = "deploy",
    srcs = ["//tools/scripts/bazel:deploy.sh"],
    data = [
        "//typescript/portfolio-worker:sources",
        "//typescript/job-automation:sources",
    ],
)
