# TypeScript Applications - Parent BUILD
package(default_visibility = ["//visibility:private"])

# All TypeScript sources
filegroup(
    name = "all_sources",
    srcs = [
        "//typescript/portfolio-worker:sources",
        "//typescript/job-automation:sources",
        "//typescript/cli:sources",
        "//typescript/data:sources",
    ],
    visibility = ["//visibility:public"],
)
