# Resume CLI - Deployment Tool
package(default_visibility = ["//typescript:__subpackages__"])

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.js", "**/*.json"],
        exclude = ["node_modules/**"],
    ),
)

# CLI binary (delegates to subpackage)
alias(
    name = "cli",
    actual = "//typescript/cli/bin:resume_cli",
)
