# Job Automation - MCP Server
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//typescript:__subpackages__"])

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.js", "**/*.json"],
        exclude = ["node_modules/**"],
    ),
)

# Test target
sh_binary(
    name = "test",
    srcs = ["//tools/scripts/bazel:test_job_automation.sh"],
    data = [":sources"],
)

# Deploy workers
sh_binary(
    name = "deploy",
    srcs = ["//tools/scripts/bazel:deploy_job_automation.sh"],
    data = [":sources"],
)
