# Job Automation - MCP Server
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//typescript:__subpackages__"])

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.js", "**/*.json"],
        exclude = ["node_modules/**"],
        allow_empty = True,
    ),
    visibility = [
        "//tools:__pkg__",
        "//typescript:__subpackages__",
    ],
)

# Test target
sh_binary(
    name = "test",
    srcs = ["//tools/scripts/bazel:test_job_automation.sh"],
    data = [":sources"],
)

# Build target
sh_binary(
    name = "build",
    srcs = ["//tools/scripts/bazel:build_job_automation.sh"],
    data = [":sources"],
)

# Deploy workers
sh_binary(
    name = "deploy",
    srcs = ["//tools/scripts/bazel:deploy_job_automation.sh"],
    data = [":sources"],
)
