# Portfolio Worker Library Modules
# 
# This package contains utility modules used by the portfolio worker:
# - cards.js: Resume card generation (education, experience, skills)
# - validators.js: Input validation (security, data integrity)
# - templates.js: HTML template rendering
# - i18n.js: Internationalization (ko/en support)
# - metrics.js: Performance monitoring (Prometheus integration)
# - security-headers.js: CSP, HSTS, X-Frame-Options
# - cache-headers.js: Cache-Control, ETag, Vary headers
# - compression.js: Brotli/Gzip compression
# - ab-testing.js: A/B test variant assignment
# - loki-logger.js: Structured logging to Grafana Loki
# - performance-metrics.js: Web Vitals (LCP, FID, CLS)
# - env.js: Environment variable validation
# - config.js: Runtime configuration
# - utils.js: Shared utilities

package(default_visibility = ["//typescript/portfolio-worker:__pkg__"])

# All library modules as a filegroup
# Used by generate-worker.js during build process
filegroup(
    name = "sources",
    srcs = glob([
        "*.js",
    ], exclude = [
        "*.test.js",
    ]),
)

# Individual modules for fine-grained dependency tracking
filegroup(
    name = "cards",
    srcs = ["cards.js"],
)

filegroup(
    name = "validators",
    srcs = ["validators.js"],
)

filegroup(
    name = "templates",
    srcs = ["templates.js"],
)

filegroup(
    name = "i18n",
    srcs = ["i18n.js"],
)

filegroup(
    name = "metrics",
    srcs = [
        "metrics.js",
        "performance-metrics.js",
        "loki-logger.js",
    ],
)

filegroup(
    name = "security",
    srcs = [
        "security-headers.js",
        "cache-headers.js",
    ],
)

filegroup(
    name = "compression",
    srcs = ["compression.js"],
)

filegroup(
    name = "ab_testing",
    srcs = ["ab-testing.js"],
)

filegroup(
    name = "utils",
    srcs = [
        "utils.js",
        "env.js",
        "config.js",
    ],
)
